# evtcall-rs

./: Cargo.toml  README.md
src/: channel.rs  channel_linux.rs  channel_windows.rs  consts.rs  consts_windows.rs  defer.rs  errors.rs  eventfd.rs  eventfd_linux.rs  eventfd_windows.rs  interface.rs  lib.rs  logger.rs  macros.rs  macros_linux.rs  macros_windows.rs  mainloop.rs  mainloop_linux.rs  mainloop_windows.rs  sockhdl.rs  sockhdl_linux.rs  sockhdl_windows.rs  sockhdltype.rs  thread.rs  thread_linux.rs  thread_windows.rs  timeop.rs
test/cases/: Cargo.toml
test/cases/src/: evtchat_linux.rs  evtchat_windows.rs  evttcphdl.rs  exithdl.rs  exithdl_consts.rs  exithdl_linux.rs  exithdl_windows.rs  fileop.rs  main.rs  strop.rs  thrtst.rs  timertst.rs  wchar_windows.rs
