[package]
name = "evtcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.0"
lazy_static = "^1.4.0"


[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["sysinfoapi", "synchapi","winsock2","ioapiset","minwinbase","errhandlingapi","handleapi","ws2def","ws2tcpip","mswsock"]


