[package]
name = "evtcall"
version = "0.1.4"
edition = "2021"
rust-version = "1.59.0"
author = ["jeppeter <jeppeter@gmail.com>"]
description = """
Rust Event Driven Framework
"""
license = "MIT/Apache-2.0"

repository = "https://github.com/jeppeter/evtcall-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.0"
lazy_static = "^1.4.0"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["sysinfoapi", "synchapi","winsock2","ioapiset","minwinbase","errhandlingapi","handleapi","ws2def","ws2tcpip","mswsock"]


