[package]
name = "cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtcall = {path = "../../",features=["debug_mode"]}
#evtcall = {path = "../../"}
extargsparse_worker = "^0.2.0"
extargsparse_codegen = "^0.1.4"
lazy_static = "^1.4.0"
regex = "1"
chrono = "^0.4.0"
log4rs = "^0.8.3"
log = "^0.4.8"
num-bigint = "^0.4.3"
num-bigint-dig = {version = "0.8.1", features = [    "i128",    "u64_digit",    "prime",    "zeroize"], default-features = false}
libc = "0.2"
base64 = "^0.13.0"
num-traits = "^0.2.5"
sha2 = "^0.10.2"
rand_core = "^0.6.4"
rand = "^0.8.5"
extlog = "^0.1.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winbase","stringapiset","debugapi","sysinfoapi","minwindef","errhandlingapi", "setupapi","processenv","consoleapi","wincontypes","wincon","synchapi"]
